Add additional config files and restructure file structure

--- a/home/opensim/opensim/bin/grid/Templates/TEMPLATE_OpenSim.ini
+++ b/home/opensim/opensim/bin/grid/Templates/TEMPLATE_OpenSim.ini
@@ -53,7 +53,7 @@
     ; in the configuration for a standalone.
 
     ;# {BaseURL} {} {BaseURL} {"http://example.com" "http://127.0.0.1"} "http://127.0.0.1"
-    BaseURL = "http://onemoregrid.com"
+    BaseURL = "http://mygrid.com"
     
     ;# {PublicPort} {} {PublicPort} {8002 9000} "8002"
     PublicPort = "8002"
@@ -828,7 +828,7 @@
     ;# {gridname} {index_sims:true} {Enter the name fo your grid} {} OSGrid
     ;; If search is on, change this to your grid name; will be ignored for
     ;; standalones
-    gridname = "OneMoregrid.com"
+    gridname = "MyGrid.com"
 
     ;# {default_snapshot_period} {index_sims:true} {Period between data snapshots?} {} 1200
     ;; Period between data snapshots, in seconds. 20 minutes, for starters,
@@ -1072,13 +1072,13 @@
     ;; or http://mygridserver.com:82/Grid/ for SimianGrid
     ;; or ${Const|BaseURL}:${Const|PrivatePort} for robust, V2
     ;; Leave it commented for standalones, V2
-    GroupsServerURI = "http://onemoregrid.com:8003"
+    GroupsServerURI = "http://mygrid.com:8003"
 
     ;# {HomeURI} {ServicesConnectorModule:Groups HG Service Connector} {What's the home address of this world?} {} 
     ;; Used for V2 in HG only. For example
     ;; http://mygridserver.com:9000 or http://mygridserver.com:8002
     ;; If you have this set under [Startup], no need to set it here, leave it commented
-     HomeURI = "http://onemoregrid.com:8002" 
+     HomeURI = "http://mygrid.com:8002" 
 
     ;# {MessagingEnabled} {Module:GroupsModule Module:Groups Module V2} {Is groups messaging enabled?} {true false} true
      MessagingEnabled = true
