--- a/home/opensim/opensim/bin/Robust.HG.ini
+++ b/home/opensim/opensim/bin/Robust.HG.ini
@@ -309,7 +309,7 @@
     ;;  
     ;; Persistent       When the simulator is shutdown, the region is signalled as offline but left registered on the grid.
     ;;
-     Region_OMG_Welcome = "DefaultRegion, FallbackRegion, DefaultHGRegion"
+     Region_simulator = "DefaultRegion, FallbackRegion, DefaultHGRegion"
     ; (replace spaces with underscore)
 
     ;; Allow Hyperlinks to be created at the console
@@ -477,7 +477,7 @@
     ;; Set minimum fee to publish classified
     ; ClassifiedFee = 0
 
-    WelcomeMessage = "Welcome to OneMoreGrid, Avatar!"
+    WelcomeMessage = "Welcome to MyGrid, Avatar!"
     AllowRemoteSetLoginLevel = "false"
 
     ; For V2 map
